--- a/my-react-app/src/components/LiquidEther.css
+++ b/my-react-app/src/components/LiquidEther.css
@@ -4,4 +4,9 @@
     width: 100%;
     height: 100%;
     touch-action: none;
+    pointer-events: auto;
+}
+
+.liquid-ether-container canvas {
+    pointer-events: auto;
 }
